# winmerge-qt

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  Version.h  winmerge.pro
ext/: Makefile  ext.pro
ext/boost_1_70_0/: b2  project-config.jam
ext/boost_1_70_0/bin.v2/: project-cache.jam
ext/libxdiff/: CMakeLists.txt  config.h  libxdiff.pro
ext/libxdiff/man/: Makefile.am  Makefile.in  mkpages.sh  xdiff-lib.html  xdiff.3  xdiff.html
ext/libxdiff/test/: Makefile.am  Makefile.in  xdiff_test.c  xregression.c  xtestutils.c  xtestutils.h
ext/libxdiff/tools/: Makefile.am  Makefile.in  xrabin.c
ext/libxdiff/xdiff/: Makefile.am  Makefile.in
ext/poco/: CMakeLists.txt
lib/: dircompare.cpp  dircompare.h  filecompare.cpp  filecompare.h  lib.pri  libxdiff_tools.cpp  libxdiff_tools.h  resultitem.h
src/: AboutDlg.cpp  AboutDlg.h  CMakeLists.txt  Constants.h  DiffFileInfo.cpp  DirItem.cpp  DirItem.h  Environment.cpp  Environment.h  FileFilter.h  FileFilterHelper.cpp  FileFilterHelper.h  FileFilterMgr.cpp  FileFilterMgr.h  FileVersion.cpp  FileVersion.h  FilterList.cpp  FilterList.h  IDD_COMPARE_STATISTICS.cpp  IDD_COMPARE_STATISTICS.h  IDD_COMPARE_STATISTICS3.cpp  IDD_COMPARE_STATISTICS3.h  IDD_CONFIRM_COPY.cpp  IDD_CONFIRM_COPY.h  IDD_DIRCMP_REPORT.cpp  IDD_DIRCMP_REPORT.h  IDD_DIRCOLS.cpp  IDD_DIRCOLS.h  IDD_DIRCOMP_PROGRESS.cpp  IDD_DIRCOMP_PROGRESS.h  IDD_DIR_FILTER.cpp  IDD_DIR_FILTER.h  IDD_EDITOR_HEADERBAR.cpp  IDD_EDITOR_HEADERBAR.h  IDD_EDIT_FIND.cpp  IDD_EDIT_FIND.h  IDD_EDIT_MARKER.cpp  IDD_EDIT_MARKER.h  IDD_EDIT_REPLACE.cpp  IDD_EDIT_REPLACE.h  (+166 more)
src/Common/: ExConverter.cpp  ExConverter.h  OptionsMgr.cpp  OptionsMgr.h  UniFile.cpp  UniFile.h  VersionInfo.cpp  VersionInfo.h  tchar.h  types.h  varprop.cpp  varprop.h  z_old_PreferencesDlg.cpp
src/qt_ui/: IDD_COMPARE_STATISTICS.ui  IDD_COMPARE_STATISTICS3.ui  IDD_CONFIRM_COPY.ui  IDD_DIRCMP_REPORT.ui  IDD_DIRCOLS.ui  IDD_DIRCOMP_PROGRESS.ui  IDD_DIR_FILTER.ui  IDD_EDITOR_HEADERBAR.ui  IDD_EDIT_FIND.ui  IDD_EDIT_MARKER.ui  IDD_EDIT_REPLACE.ui  IDD_ENCODINGERROR.ui  IDD_FILEFILTERS.ui  IDD_GENERATE_PATCH.ui  IDD_LOAD_SAVE_CODEPAGE.ui  IDD_OPEN.ui  IDD_PLUGINS_LIST.ui  IDD_PROPPAGE_CODEPAGE.ui  IDD_PROPPAGE_COLORS_DIR.ui  IDD_PROPPAGE_COLORS_MARKER.ui  IDD_PROPPAGE_COLORS_SYNTAX.ui  IDD_PROPPAGE_COLORS_TEXT.ui  IDD_PROPPAGE_COLORS_WINMERGE.ui  IDD_PROPPAGE_COMPARE.ui  IDD_PROPPAGE_COMPARE_BINARY.ui  IDD_PROPPAGE_COMPARE_FOLDER.ui  IDD_PROPPAGE_COMPARE_IMAGE.ui  IDD_PROPPAGE_FILTER.ui  IDD_SAVECLOSING.ui  IDD_SELECTUNPACKER.ui  IDD_SHARED_FILTER.ui  IDD_TEST_FILTER.ui  IDD_WMGOTO.ui  QAboutDlg.ui  QMainMenu.ui  QPreferencesDlg.ui  QPropArchive.ui  QPropBackups.ui  QPropCodepage.ui  QPropCompare.ui  (+16 more)
src/res/mac/: Info.plist  winmerge.icns
src/translations/: Brazilian.ts  Dutch.ts  German.ts  german.po  german.ts  gui_de_DE.ts  gui_en_US.ts
